# passess

./: .gitignore  NOTES.md  README.md  index.html  pyproject.toml  search.json  solution-dim2-cartesian.md  solution-dim2-polar.md  solution-dim3-cartesian.md  solution-dim3-spherical.md
.github/workflows/: docs.yml  test.yml
docs/: README.md  _quarto.yml  build.sh  index.qmd
examples/: dim2-cartesian.html  dim2-cartesian.py  dim2-polar.html  dim2-polar.py
passess/: cartesian.py  cartesian3d.py  polar.py  spherical.py
reference/: cartesian.PoissonCartesian2D.html  cartesian3d.PoissonCartesian3D.html  index.html  polar.PoissonPolar2D.html  spherical.PoissonSpherical3D.html
site_libs/bootstrap/: bootstrap.min.css
tests/: README.md  test_poisson_cartesian2d.py  test_poisson_cartesian3d.py  test_poisson_polar2d.py  test_poisson_spherical3d.py
